--- a/bower.json
+++ b/bower.json
@@ -1,9 +1,6 @@
 {
-  "name": "angular-seed",
-  "description": "A starter project for AngularJS",
+  "name": "angular-practical-training",
   "version": "0.0.0",
-  "homepage": "https://github.com/angular/angular-seed",
-  "license": "MIT",
   "private": true,
   "dependencies": {
     "angular": "~1.4.0",
