--- a/package.json
+++ b/package.json
@@ -4,12 +4,19 @@
   "version": "0.0.0",
   "devDependencies": {
     "bower": "^1.3.1",
-    "http-server": "^0.6.1"
+    "http-server": "^0.6.1",
+    "protractor": "2.1.0"
   },
   "scripts": {
     "postinstall": "bower install",
 
     "prestart": "npm install",
-    "start": "http-server -a localhost -p 8000 -c-1"
+    "start": "http-server -a localhost -p 8000 -c-1",
+
+    "preupdate-webdriver": "npm install",
+    "update-webdriver": "webdriver-manager update",
+
+    "preprotractor": "npm run update-webdriver",
+    "protractor": "protractor e2e-tests/protractor.conf.js"
   }
 }
