--- a/bower.json
+++ b/bower.json
@@ -7,6 +7,8 @@
     "angular-route": "~1.4.0",
     "angular-loader": "~1.4.0",
     "angular-mocks": "~1.4.0",
-    "html5-boilerplate": "~5.2.0"
+    "html5-boilerplate": "~5.2.0",
+    "jquery": "~2.1.4",
+    "jquery-ui": "~1.11.4"
   }
 }
