--- a/package.json
+++ b/package.json
@@ -5,13 +5,20 @@
   "devDependencies": {
     "bower": "^1.3.1",
     "http-server": "^0.6.1",
-    "protractor": "2.1.0"
+    "protractor": "2.1.0",
+    "karma": "~0.12",
+    "jasmine-core": "^2.3.4",
+    "karma-jasmine": "^0.3.5",
+    "karma-chrome-launcher": "^0.1.12"
   },
   "scripts": {
     "postinstall": "bower install",
 
     "prestart": "npm install",
     "start": "http-server -a localhost -p 8000 -c-1",
+
+    "pretest": "npm install",
+    "test": "karma start test/karma.conf.js",
 
     "preupdate-webdriver": "npm install",
     "update-webdriver": "webdriver-manager update",
