--- a/package.json
+++ b/package.json
@@ -18,12 +18,12 @@
     "start": "http-server -a localhost -p 8000 -c-1",
 
     "pretest": "npm install",
-    "test": "karma start test/karma.conf.js",
+    "test": "karma start test/unit/karma.conf.js",
 
     "preupdate-webdriver": "npm install",
     "update-webdriver": "webdriver-manager update",
 
     "preprotractor": "npm run update-webdriver",
-    "protractor": "protractor e2e-tests/protractor.conf.js"
+    "protractor": "protractor test/e2e/protractor.conf.js"
   }
 }
